<resources>
    <string name="app_name">Gains</string>
    <string name="launcher_name">Gains</string>

    <!-- MENU ITEMS -->

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <string name="action_add_exercise">Add exercise</string>
    <string name="action_add_note">Add a note&#8230;</string>
    <string name="action_pause_workout">Pause workout</string>
    <string name="action_resume_workout">Resume workout</string>
    <string name="action_end_workout">End workout</string>
    <string name="action_save_as_routine">Save as routine</string>

    <string name="action_newfrom_routines">Start selected</string>
    <string name="action_duplicate_selected">Duplicate selected</string>

    <string name="action_delete_set">Delete Set</string>

    <string name="action_replace_exercise">Replace Exercise</string>

    <string name="action_group">Group</string>
    <string name="action_ungroup">Ungroup</string>
    <string name="action_separate_from_Group">Separate From Group</string>

    <string name="action_share">Share</string>

    <!-- Row Popup -->
    <string name="action_edit_goals">Edit goals</string>
    <string name="action_delete_exercise">Delete exercise</string>
    <string name="action_edit_exercise">Edit exercise</string>

    <!-- MAIN ACTIVITY -->

    <string name="back_to_workout">BACK TO WORKOUT</string>
    <string name="start_workout">START WORKOUT</string>

    <string name="fam_new_workout">New workout / routine</string>
    <string name="fam_use_routine">Use routine</string>

    <string name="tab_start">START</string>
    <string name="tab_history">HISTORY</string>
    <string name="tab_routines">ROUTINES</string>

    <!-- EMPTY LISTS -->

    <string name="no_workouts">No workout yet.\nStart your first workout today!</string>
    <string name="no_routines">No routine yet.\nCreate your first routine!</string>
    <string name="workoutList_empty">Empty workout.\nAdd an exercise to start!</string>

    <string name="no_exercise">No exercise</string>

    <!-- EXERCISE SELECTION DIALOG -->
    <string name="dialog_exercise_selection_title">Add exercises to workout</string>
    <string name="dialog_exercise_selection_message">Select one or multiple exercises</string>
    <string name="dialog_addexercise_ok">ADD TO WORKOUT</string>
    <string name="dialog_exerciseSelection_empty">No exercise</string>
    <string name="exercise_selection_new_exercise">New exercise&#8230;</string>
    <string name="add">Add</string>

    <!-- REST PICKER DIALOG -->
    <string name="dialog_rest_picker_title">Set rest for exercise</string>

    <!-- GOAL EDITOR DIALOG -->
    <string name="dialog_goal_editor_title">Edit workout goals</string>
    <string name="dialog_goal_editor_message">Insert your goals</string>
    <string name="dialog_goal_editor_dont_set_goals">DON\'T SET GOALS</string>

    <!-- WORKOUT COMPLETE DIALOG -->
    <string name="dialog_workout_complete_title">Workout complete</string>
    <string name="dialog_workout_complete_message">Congratulations! You\'ve completed your workout.</string>
    <string name="dialog_workout_complete_back">BACK</string>

    <!-- DELETE WORKOUT / ROUTINE DIALOG -->
    <string name="dialog_delete_title">Really delete?</string>
    <string name="dialog_delete_message_a">"Do you really want to delete "</string>
    <string name="dialog_delete_message_b">\?\n\nThis cannot be undone.</string>
    <string name="dialog_delete">DELETE</string>

    <string name="the_selected_workout">the selected workout</string>
    <string name="the_selected_workouts">the selected workouts</string>

    <string name="the_selected_routine">the selected routine</string>
    <string name="the_selected_routines">the selected routines</string>

    <!-- DIALOG GENERAL -->
    <string name="dialog_yes">YES</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_next">NEXT</string>
    <string name="dialog_finish">FINISH</string>

    <!-- WORKOUT ACTIVITY -->

    <string name="title_activity_workout">WorkoutActivity</string>

    <string name="title_prepare_workout">Prepare Workout</string>
    <string name="title_active_workout">Active Workout</string>
    <string name="title_edit_workout">Edit Workout</string>
    <string name="title_edit_routine">Edit Routine</string>

    <string name="workout_selected">Workout</string>
    <string name="workouts_selected">Workouts</string>
    <string name="routine_selected">Routine</string>
    <string name="routines_selected">Routines</string>
    <string name="exercise_selected">Exercise</string>
    <string name="exercises_selected">Exercises</string>
    <string name="sub_exercise_selected">Sub Exercise</string>

    <string name="empty_workout">Empty workout</string>

    <string name="toast_discarded_workout">Discarded unchanged workout</string>
    <string name="toast_workout_already_active">Workout already active</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_back_to_workout">Back to workout</string>
    <string name="notification_rest_remaining">"Rest remaining: "</string>
    <string name="notification_rest_is_up">Rest is up!</string>

    <!-- GENERAL -->

    <string name="set">Set</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="rest">Rest</string>

    <string name="unnamed_workout">Unnamed Workout</string>
    <string name="unnamed_routine">Unnamed Routine</string>

    <string name="deleted_exercise">Deleted Exercise</string>

    <string name="none"></string>

    <string name="set_text" translatable="false">&#8239;×&#8239;</string>

    <!-- WORKOUT VIEWER -->

    <string name="title_activity_workout_view">WorkoutView</string>
    <string name="workout_details_title">Workout Details</string>

    <!-- PREFERENCES -->

    <string name="pref_general">General</string>


    <string name="pref_timing">Workout Timing</string>

    <string name="pref_key_enable_timer" translatable="false">enable_timer</string>
    <string name="pref_enable_timer">Enable workout timing</string>
    <string name="pref_enable_timer_summary">Use the timer to stop rest times</string>

    <string name="pref_key_timer_max" translatable="false">timer_max</string>
    <string name="pref_timer_max">Maximum rest time</string>
    <string name="pref_timer_max_summary">Maximum rest time selectable by dragging (in minutes)</string>

    <string name="pref_key_rest_increment" translatable="false">rest_increment</string>
    <string name="pref_rest_increment">Default rest increment (in seconds)</string>

    <string name="pref_key_auto_skip" translatable="false">auto_skip</string>
    <string name="pref_auto_skip">Automatically skip rest in supersets (recommended)</string>

    <string name="pref_key_alarm_sound" translatable="false">alarm_sound</string>
    <string name="pref_alarm_sound">Alarm sound for timer</string>
    <string name="pref_alarm_sound_summary">This sound is played when the countdown is finished</string>

    <string name="pref_key_acustic_countdown" translatable="false">acustic_countdown</string>
    <string name="pref_acustic_countdown">Acustic countdown (beep sound)</string>

    <string name="pref_key_vibrate_countdown" translatable="false">vibrate_countdown</string>
    <string name="pref_vibrate_countdown">Vibrate on countdown</string>

    <string name="pref_key_beep" translatable="false">beep</string>
    <string name="pref_beep">Start acustic countdown at (seconds)</string>

    <string name="pref_developer">Developer options</string>

    <string name="pref_key_cleanup_exercises" translatable="false">cleanup_exercises</string>
    <string name="pref_cleanup_exercises">Clean up exercises</string>
    <string name="pref_cleanup_exercises_summary">Delete unused exercises from database</string>
    <string name="pref_cleanup_exercises_done">Cleaned up exercises</string>

    <string name="pref_key_clear_database" translatable="false">clear_database</string>
    <string name="pref_clear_database">Clear database</string>
    <string name="pref_clear_database_summary">Delete ALL data in database</string>
    <string name="pref_clear_database_dialog">Do you really want to delete all data in the database?</string>
    <string name="pref_clear_database_done">Cleared database</string>

    <string name="pref_key_recreate_dummy_data" translatable="false">recreate_dummy_data</string>
    <string name="pref_recreate_dummy_data">Recreate dummy data</string>
    <string name="pref_recreate_dummy_data_done">Recreated dummy data</string>

    <!-- INTEGERS -->

    <integer name="databaseVersion">1</integer>
    <integer name="holdButton_timeOut">100</integer>
    <string name="title_activity_timer_test">TimerTest</string>

    <string name="hello_world">Hello world!</string>

</resources>
