<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_group"
        android:title="@string/action_group"
        android:icon="@drawable/ic_call_merge_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_ungroup"
        android:title="@string/action_ungroup"
        android:icon="@drawable/ic_call_split_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_separate_from_group"
        android:title="@string/action_separate_from_Group"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_edit"
        android:title="@string/action_replace_exercise"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"/>

</menu>