<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mycompany.gains.Activities.WorkoutEditorOld.WorkoutEditorOld">

    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit" android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
