<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mycompany.gains.Activities.WorkoutEditorOld.WorkoutEditorOld">

    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" android:showAsAction="always"/>

    <item android:id="@+id/action_edit" android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always" android:showAsAction="always" />

    <item android:id="@+id/action_duplicate" android:title="@string/action_duplicate_selected"
        android:icon="@drawable/ic_content_copy_white_24dp"
        app:showAsAction="always" android:showAsAction="always" />

    <item android:id="@+id/action_save_as_routine" android:title="@string/action_save_as_routine"
        app:showAsAction="never"/>

</menu>
