<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mycompany.gainz.Activities.WorkoutEditor">

    <item android:id="@+id/action_pause_resume_workout" android:title="@string/action_resume_workout"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_exercise" android:title="@string/action_add_exercise"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_note" android:title="@string/action_add_note"
        android:icon="@drawable/ic_note_add_white_24dp"
        app:showAsAction="never" />

</menu>
